Tic Tac Toe Game Final Product End

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="board">
         <!--Board Header-->
         <h1>Tic Tac Toe</h1>
+        <h3 id="result"></h3>
         <!--First Row-->
         <div class="row">
                 <div class="top left"></div>
@@ -23,9 +24,9 @@
         </div>
         <!--Second Row-->
         <div class="row">
-                <div class="left"></div>
-                <div class="middle"></div>
-                <div class="right"></div>
+                <div class="center left"></div>
+                <div class="center middle"></div>
+                <div class="center right"></div>
         </div>
         <!--Third Row-->
         <div class="row">
