Dom practice example

--- a/javaScript-labs/index.html
+++ b/javaScript-labs/index.html
@@ -7,21 +7,14 @@
     <title>99 Lines of Code In The File</title>
     <style>
             body{background-color: honeydew;}
-            h1{color: green;text-align: center;}
+
             .friend{background-color: rgb(250, 220, 230);text-align: center;}
             .friend > h3{text-transform: uppercase;}
     </style>
 </head>
 <body>
-      <h1>My Singing Friends</h1>
-      <div class="friend">
-          <h3>Friend</h3>
-          <p>Test1</p>
-          <p>Test2</p>
-          <p>Test3</p>
-          <p>Test4</p>
-          <p>Test5</p>  
-      </div> 
+          
+      <button>Sing!</button> 
       <script src="friends.js"></script> 
 </body>
 </html>
